fix misaligned img

--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
 body {background-color: #3f84bf;}
 
-img {
+img.center {
         display: block;
         margin-left: auto;
         margin-right: auto;
